# onchain_registry

onchain_hub_kb/: .gitignore  README.md  pyproject.toml
onchain_hub_kb/onchain_hub_kb/: .env.example  run.py
onchain_hub_kb/onchain_hub_kb/configs/: deployment.json
onchain_registry/: .gitignore  README.md  deployed-contract.json  hardhat.config.js  ipfs_test.js  ipfs_test.py  notes.txt  package-lock.json  package.json  pyproject.toml
onchain_registry/contracts/: registry.sol
onchain_registry/scripts/: deploy.js
onchain_registry/test/: Registry.js
